fix table styles on collapsed views

--- a/app/components/shared/TxHistory/TxHistory.module.css
+++ b/app/components/shared/TxHistory/TxHistory.module.css
@@ -296,15 +296,23 @@
   .overviewRow {
     width: 315px;
   }
-  .historyRow {
-    width: 667px;
-    background-position: 642px;
-  }
 }
 
 @media screen and (max-width: 768px) {
   .historyRow {
-    width: 355px;
+    width: 100%;
+  }
+  .stakeType {
+    display: none;
+  }
+  .ticketReward {
+    display: none;
+  }
+  .voteReward {
+    display: none;
+  }
+  .myTickets {
+    grid-template-columns: 1fr 2fr 2fr 1fr;
   }
   .accountName {
     background: transparent;
